--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>21</java.version>
         <vavr.verison>0.10.4</vavr.verison>
         <swagger.version>1.8.0</swagger.version>
+        <graphql.version>15.1.0</graphql.version>
     </properties>
     <dependencies>
 <!--        <dependency>-->
@@ -34,6 +35,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
         <dependency>
